# px4-newton-bridge

./: .coderabbit.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  _typos.toml  mkdocs.yml  pyproject.toml  run_docker.sh  run_sitl.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml
.github/docker/: Dockerfile.ci-pod
.github/scripts/: run_test_on_pod.sh
.github/workflows/: check-generated-proto.yml  docker-image.yml  docs.yml  gpu-sitl-test.yml  pr.yml  px4-sitl-tests.yml
docker/: Dockerfile  docker-compose.build.yaml  docker-compose.gpu.yaml  docker-compose.yaml
docs/: architecture.md  conventions.md  index.md  vehicles.md
docs/contributing/: development.md  docs.md
docs/getting-started/: docker.md  local.md
newton_api/: __init__.py  client.py
proto/: newton_api.proto
px4_newton_bridge/: __init__.py  _generate_proto.py  config.yaml  drone.py  grpc_server.py  logging.py  main.py  mavlink_interface.py  propeller_basic.py  simulator.py  vehicle.py  viewer.py
px4_newton_bridge/actuators/: __init__.py  actuator_base.py  propeller_basic.py
px4_newton_bridge/builders/: __init__.py  builder_base.py  quad_x_primitive.py  urdf.py
px4_newton_bridge/models/: __init__.py  base_model.py  quadrotor.py
px4_newton_bridge/models/configs/: astro.yaml
px4_newton_bridge/vehicles/astro_max/: model.yaml
px4_newton_bridge/vehicles/quad_x/: model.yaml
scripts/: run_px4_sitl_tests.sh
tests/: CMakeLists.txt  run_sitl_test.sh  test_takeoff_land.cpp  test_takeoff_land.py
