[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "px4-newton-bridge"
version = "0.1.0"
description = "PX4 SITL bridge for Newton physics engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "newton[sim]",
    "newton[importers]",
    "GitPython>=3.1.44",
    "pyyaml>=6.0.2",
    "pymavlink>=2.4.41",
    "rerun-sdk>=0.27.1",
]

[tool.uv.sources]
newton = { path = "./newton", editable = true }

[[tool.uv.index]]
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com/"
explicit = true

[[tool.uv.index]]
name = "mujoco"
url = "https://py.mujoco.org"
explicit = true

[tool.uv.sources.mujoco-warp]
git = "https://github.com/google-deepmind/mujoco_warp"

[tool.uv.sources.warp-lang]
index = "nvidia"

[tool.uv.sources.mujoco]
index = "mujoco"

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["./newton", ".venv/lib/python3.11/site-packages/rerun_sdk"]
